took out steps - made the form into one

--- a/src/form/form.html
+++ b/src/form/form.html
@@ -16,22 +16,19 @@
 
       </md-toolbar>
 
-      <md-subheader ng-show="vm.stage===1" class="md-primary">Company details</md-subheader>
-      <md-subheader ng-show="vm.stage===2"  class="md-primary">Signatory details</md-subheader>
-      <md-subheader ng-show="vm.stage===3"  class="md-primary">Administrator details</md-subheader>
+
 
       <md-content layout-margin>
 
         <form
-          ng-switch="vm.stage"
           name="register"
           novalidate
           ng-submit="vm.onSubmit(register)"
         >
+          <md-subheader class="md-primary">Company details</md-subheader>
           <ng-form
-              name="registerPart1"
+              name="company"
               novalidate
-              ng-switch-when="1"
             >
               <md-input-container class="md-block">
                 <label>Company name</label>
@@ -41,8 +38,8 @@
                   required
                 >
                 <div
-                  ng-messages="registerPart1.companyName.$error"
-                  ng-show="registerPart1.companyName.$touched || vm.clickedNext.registerPart1"
+                  ng-messages="company.companyName.$error"
+                  ng-show="company.companyName.$touched || register.$submitted"
                 >
                   <div ng-message="required">This is required.</div>
                 </div>
@@ -56,8 +53,8 @@
                   required
                 >
                 <div
-                  ng-messages="registerPart1.registrationNumber.$error"
-                  ng-show="registerPart1.registrationNumber.$touched || vm.clickedNext.registerPart1"
+                  ng-messages="company.registrationNumber.$error"
+                  ng-show="company.registrationNumber.$touched || register.$submitted"
                 >
                   <div ng-message="required">This is required.</div>
                 </div>
@@ -70,35 +67,24 @@
                     {{structure}}
                   </md-option>
                 </md-select>
-                <div ng-messages="registerPart1.legalStructure.$error"
-                     ng-show="registerPart1.legalStructure.$touched || vm.clickedNext.registerPart1">
+                <div ng-messages="company.legalStructure.$error"
+                     ng-show="company.legalStructure.$touched || register.$submitted">
                   <div ng-message="required">This is required.</div>
                 </div>
               </md-input-container>
-
-              <div layout="row" layout-align="end">
-                <md-button
-                  ng-click="vm.onClickNext(registerPart1)"
-                  class="md-icon-button md-primary test-button"
-                  aria-label="Next"
-                >
-                  <ng-md-icon icon="chevron_right" size="40"></ng-md-icon>
-                </md-button>
-              </div>
-
             </ng-form>
 
+          <md-subheader class="md-primary">Signatory details</md-subheader>
           <ng-form
-              ng-switch-when="2"
-              name="registerPart2"
+              name="signatory"
               novalidate
             >
               <md-input-container class="md-block">
                 <label>Signatory forename</label>
                 <input ng-model="vm.company.signatory.forename" name="signatoryFirstName" required>
                 <div
-                  ng-messages="registerPart2.signatoryFirstName.$error"
-                  ng-show="registerPart2.signatoryFirstName.$touched || vm.clickedNext.registerPart2"
+                  ng-messages="signatory.signatoryFirstName.$error"
+                  ng-show="signatory.signatoryFirstName.$touched || register.$submitted"
                 >
                   <div ng-message="required">This is required.</div>
                 </div>
@@ -108,8 +94,8 @@
                 <label>Signatory surname</label>
                 <input ng-model="vm.company.signatory.surname" name="signatorySurname" required>
                 <div
-                  ng-messages="registerPart2.signatorySurname.$error"
-                  ng-show="registerPart2.signatorySurname.$touched || vm.clickedNext.registerPart2"
+                  ng-messages="signatory.signatorySurname.$error"
+                  ng-show="signatory.signatorySurname.$touched || register.$submitted"
                 >
                   <div ng-message="required">This is required.</div>
                 </div>
@@ -119,42 +105,27 @@
                 <label>Signatory email address</label>
                 <input ng-model="vm.company.signatory.email" type="email" name="signatoryEmail" required>
                 <div
-                  ng-messages="registerPart2.signatoryEmail.$error"
-                  ng-show="registerPart2.signatoryEmail.$touched || vm.clickedNext.registerPart2"
+                  ng-messages="signatory.signatoryEmail.$error"
+                  ng-show="signatory.signatoryEmail.$touched || register.$submitted"
                 >
                   <div ng-message="required">This is required.</div>
                   <div ng-message="email">Please enter a valid email address.</div>
+                  <div ng-message="noDuplicate">Please enter a valid email address.</div>
                 </div>
               </md-input-container>
-
-
-              <div layout="row" layout-align="space-between">
-                <md-button
-                  class="md-icon-button md-primary"
-                  aria-label="Back"
-                  ng-click="vm.goBack()"
-                >
-                  <ng-md-icon icon="chevron_left" size="40"></ng-md-icon>
-                </md-button>
-
-                <md-button
-                  class="md-icon-button md-primary"
-                  aria-label="Back"
-                  ng-click="vm.onClickNext(registerPart2)"
-                >
-                  <ng-md-icon icon="chevron_right" size="40"></ng-md-icon>
-                </md-button>
-              </div>
             </ng-form>
 
-          <ng-form ng-switch-when="3" name="registerPart3"  novalidate>
-
+          <md-subheader class="md-primary">Administrator details</md-subheader>
+          <ng-form
+            name="dministrator"
+            novalidate
+          >
             <md-input-container class="md-block">
               <label>Administrator forename</label>
               <input ng-model="vm.company.admin.forename" name="adminFirstName" required>
               <div
-                ng-messages="registerPart3.adminFirstName.$error"
-                ng-show="registerPart3.adminFirstName.$touched || register.$submitted"
+                ng-messages="dministrator.adminFirstName.$error"
+                ng-show="dministrator.adminFirstName.$touched || register.$submitted"
               >
                 <div ng-message="required">This is required.</div>
               </div>
@@ -164,8 +135,8 @@
               <label>Signatory surname</label>
               <input ng-model="vm.company.admin.surname" name="adminSurname" required>
               <div
-                ng-messages="registerPart3.adminSurname.$error"
-                ng-show="registerPart3.signatorySurname.$touched || register.$submitted"
+                ng-messages="dministrator.adminSurname.$error"
+                ng-show="dministrator.signatorySurname.$touched || register.$submitted"
               >
                 <div ng-message="required">This is required.</div>
               </div>
@@ -175,27 +146,14 @@
               <label>Administrator email address</label>
               <input ng-model="vm.company.admin.email" type="email" name="adminEmail" required>
               <div
-                ng-messages="registerPart3.adminEmail.$error"
-                ng-show="registerPart3.adminEmail.$touched || register.$submitted"
+                ng-messages="dministrator.adminEmail.$error"
+                ng-show="dministrator.adminEmail.$touched || register.$submitted"
               >
                 <div ng-message="required">This is required.</div>
                 <div ng-message="email">Please enter a valid email address.</div>
               </div>
             </md-input-container>
-
-
-            <div
-              layout="row"
-              layout-align="end"
-            >
-              <md-button
-                type="submit"
-                class="md-raised md-primary"
-              >Submit</md-button>
-            </div>
           </ng-form>
-
-
           <!--<input name="postalCode" ng-model="user.postalCode" placeholder="12345"-->
           <!--required ng-pattern="/^[0-9]{5}$/" md-maxlength="5">-->
           <!--<div ng-messages="userForm.postalCode.$error" role="alert" multiple>-->
@@ -207,7 +165,15 @@
           <!--Don't use the long version silly...we don't need to be that specific...-->
           <!--</div>-->
           <!--</div>-->
-
+          <div
+            layout="row"
+            layout-align="end"
+          >
+            <md-button
+              type="submit"
+              class="md-raised md-primary"
+            >Submit</md-button>
+          </div>
         </form>
       </md-content>
     </md-whiteframe>
