--- a/src/form/form.html
+++ b/src/form/form.html
@@ -7,25 +7,22 @@
     flex-gt-xs="60"
     flex-gt-sm="40"
     class="md-whiteframe-3dp"
+    layout="column"
   >
       <md-toolbar>
 
         <div class="md-toolbar-tools">
-          <h2 md-truncate flex>Register for SmartPension</h2>
+          <h1 md-truncate flex>Register for SmartPension</h1>
         </div>
 
       </md-toolbar>
-
-
-
-      <md-content layout-margin>
-
+      <md-content layout-padding>
         <form
           name="register"
           novalidate
           ng-submit="vm.onSubmit(register)"
         >
-          <md-subheader class="md-primary">Company details</md-subheader>
+          <h2 class="md-title md-primary">Company details</h2>
           <ng-form
               name="company"
               novalidate
@@ -36,12 +33,14 @@
                   ng-model="vm.company.name"
                   name="companyName"
                   required
+                  unique-company-name
                 >
                 <div
                   ng-messages="company.companyName.$error"
                   ng-show="company.companyName.$touched || register.$submitted"
                 >
                   <div ng-message="required">This is required.</div>
+                  <div ng-message="uniqueCompanyName">Company name is already registered.</div>
                 </div>
               </md-input-container>
 
@@ -62,8 +61,14 @@
 
               <md-input-container class="md-block">
                 <label>Legal structure</label>
-                <md-select ng-model="vm.company.legalStructure" name="legalStructure" required>
-                  <md-option ng-repeat="structure in vm.legalStructures" value="{{structure}}">
+                <md-select
+                  ng-model="vm.company.legalStructure"
+                  name="legalStructure"
+                  required>
+                  <md-option
+                    ng-repeat="structure in vm.legalStructures"
+                    value="{{structure}}"
+                  >
                     {{structure}}
                   </md-option>
                 </md-select>
@@ -74,17 +79,22 @@
               </md-input-container>
             </ng-form>
 
-          <md-subheader class="md-primary">Signatory details</md-subheader>
+          <h2 class="md-title md-primary">Signatory details</h2>
           <ng-form
               name="signatory"
               novalidate
             >
               <md-input-container class="md-block">
                 <label>Signatory forename</label>
-                <input ng-model="vm.company.signatory.forename" name="signatoryFirstName" required>
+                <input
+                  ng-model="vm.company.signatory.forename"
+                  type="text"
+                  name="signatoryForename"
+                  required
+                >
                 <div
-                  ng-messages="signatory.signatoryFirstName.$error"
-                  ng-show="signatory.signatoryFirstName.$touched || register.$submitted"
+                  ng-messages="signatory.signatoryForename.$error"
+                  ng-show="signatory.signatoryForeName.$touched || register.$submitted"
                 >
                   <div ng-message="required">This is required.</div>
                 </div>
@@ -92,7 +102,11 @@
 
               <md-input-container class="md-block">
                 <label>Signatory surname</label>
-                <input ng-model="vm.company.signatory.surname" name="signatorySurname" required>
+                <input
+                  ng-model="vm.company.signatory.surname"
+                  name="signatorySurname"
+                  required
+                >
                 <div
                   ng-messages="signatory.signatorySurname.$error"
                   ng-show="signatory.signatorySurname.$touched || register.$submitted"
@@ -103,29 +117,36 @@
 
               <md-input-container class="md-block">
                 <label>Signatory email address</label>
-                <input ng-model="vm.company.signatory.email" type="email" name="signatoryEmail" required>
+                <input
+                  ng-model="vm.company.signatory.email"
+                  type="email"
+                  name="signatoryEmail"
+                  required
+                >
                 <div
                   ng-messages="signatory.signatoryEmail.$error"
                   ng-show="signatory.signatoryEmail.$touched || register.$submitted"
                 >
                   <div ng-message="required">This is required.</div>
                   <div ng-message="email">Please enter a valid email address.</div>
-                  <div ng-message="noDuplicate">Please enter a valid email address.</div>
                 </div>
               </md-input-container>
             </ng-form>
 
-          <md-subheader class="md-primary">Administrator details</md-subheader>
+          <h2 class="md-title md-primary">Administrator details</h2>
           <ng-form
-            name="dministrator"
+            name="administrator"
             novalidate
           >
             <md-input-container class="md-block">
               <label>Administrator forename</label>
-              <input ng-model="vm.company.admin.forename" name="adminFirstName" required>
+              <input
+                ng-model="vm.company.admin.forename"
+                name="adminFirstName" required
+              >
               <div
-                ng-messages="dministrator.adminFirstName.$error"
-                ng-show="dministrator.adminFirstName.$touched || register.$submitted"
+                ng-messages="administrator.adminFirstName.$error"
+                ng-show="administrator.adminFirstName.$touched || register.$submitted"
               >
                 <div ng-message="required">This is required.</div>
               </div>
@@ -133,10 +154,14 @@
 
             <md-input-container class="md-block">
               <label>Signatory surname</label>
-              <input ng-model="vm.company.admin.surname" name="adminSurname" required>
+              <input
+                ng-model="vm.company.admin.surname"
+                name="adminSurname"
+                required
+              >
               <div
-                ng-messages="dministrator.adminSurname.$error"
-                ng-show="dministrator.signatorySurname.$touched || register.$submitted"
+                ng-messages="administrator.adminSurname.$error"
+                ng-show="administrator.signatorySurname.$touched || register.$submitted"
               >
                 <div ng-message="required">This is required.</div>
               </div>
@@ -144,36 +169,41 @@
 
             <md-input-container class="md-block">
               <label>Administrator email address</label>
-              <input ng-model="vm.company.admin.email" type="email" name="adminEmail" required>
+              <input
+                ng-model="vm.company.admin.email"
+                type="email"
+                name="adminEmail"
+                required
+                server-email-check
+              >
               <div
-                ng-messages="dministrator.adminEmail.$error"
-                ng-show="dministrator.adminEmail.$touched || register.$submitted"
+                ng-messages="administrator.adminEmail.$error"
+                ng-show="administrator.adminEmail.$touched || register.$submitted"
               >
                 <div ng-message="required">This is required.</div>
                 <div ng-message="email">Please enter a valid email address.</div>
               </div>
             </md-input-container>
           </ng-form>
-          <!--<input name="postalCode" ng-model="user.postalCode" placeholder="12345"-->
-          <!--required ng-pattern="/^[0-9]{5}$/" md-maxlength="5">-->
-          <!--<div ng-messages="userForm.postalCode.$error" role="alert" multiple>-->
-          <!--<div ng-message="required" class="my-message">You must supply a postal code.</div>-->
-          <!--<div ng-message="pattern" class="my-message">That doesn't look like a valid postal-->
-          <!--code.-->
-          <!--</div>-->
-          <!--<div ng-message="md-maxlength" class="my-message">-->
-          <!--Don't use the long version silly...we don't need to be that specific...-->
-          <!--</div>-->
-          <!--</div>-->
-          <div
-            layout="row"
-            layout-align="end"
-          >
+          <div layout="row">
             <md-button
+              flex="20"
               type="submit"
               class="md-raised md-primary"
-            >Submit</md-button>
+            >
+              Submit
+            </md-button>
+            <div layout="column" flex="80" >
+              <div
+                ng-repeat="error in vm.serverErrors"
+                class="sp-server-error-message md-caption"
+              >
+                {{error.message}}
+              </div>
+            </div>
           </div>
+
+
         </form>
       </md-content>
     </md-whiteframe>
