--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,8 @@
 <html ng-app="smartPension" lang="en" >
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
+    <link rel="stylesheet" href="https://cdn.gitcdn.link/cdn/angular/bower-material/v1.1.3/angular-material.css">
+    <link rel="stylesheet" href="./app.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <title>Smart Pension</title>
   </head>
@@ -17,12 +18,15 @@
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.js"></script>
 
   <!-- Angular Material Library -->
-  <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
+  <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/t-114/svg-assets-cache.js"></script>
+  <script src="https://cdn.gitcdn.link/cdn/angular/bower-material/v1.1.3/angular-material.js"></script>
   <!-- Angular Material Icons -->
   <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.7.1/angular-material-icons.min.js"></script>
 
   <script src="app.js"></script>
+  <script src="routes.js"></script>
   <script src="form/form.js"></script>
+  <script src="form/uniqueCompanyName.directive.js"></script>
   <script src="apiService/api.service.js"></script>
   </body>
 </html>
