added npm start script. adding bottom margin so form doesn't fill up whole page filled out README

--- a/src/form/form.html
+++ b/src/form/form.html
@@ -6,7 +6,7 @@
     flex="100"
     flex-gt-xs="60"
     flex-gt-sm="40"
-    class="md-whiteframe-3dp"
+    class="sp-form-frame md-whiteframe-2dp"
     layout="column"
   >
       <md-toolbar>
